small layout issue

--- a/app/_components/PortfolioGrid/index.scss
+++ b/app/_components/PortfolioGrid/index.scss
@@ -24,6 +24,7 @@ $base: jd-portfolio-grid;
   &__item {
     margin-bottom: spacing.$spacing-03 * 2;
     opacity: 0 !important;
+    display: inline-block;
     visibility: hidden;
     transition: opacity 0.5s ease-in-out, visibility 0.5s ease-in-out;
 
